Шапка. Не закончено

--- a/Baby-shop/index.html
+++ b/Baby-shop/index.html
@@ -3,8 +3,171 @@
 <head>
 	<meta charset="UTF-8">
 	<title>Document</title>
+	<link rel="stylesheet" href="css/Nolmalize.css">
+	<link rel="stylesheet" href="css/style.css">
 </head>
 <body>
-	Привет, Маша!
+	<header class="main-header">
+		<div class="main-header__content-wrapper">
+			<p class="phone">+7 (921) 123-45-67</p>
+			<a href="#" class="delivery">Доставка и контакты</a>
+			<div class="social">
+				<a href="#" class="social__vk"></a>
+				<a href="#" class="social__instagram"></a>
+			</div>
+			<nav class="user-navigation">
+				<button class="user-navigation__login user-navigation__item"></button>
+				<a href="#" class="user-navigation__likes user-navigation__item"></a>
+				<a href="#" class="user-navigation__basket user-navigation__item"></a>
+				<a href="#" class="user-navigation__value user-navigation__item">12</a>
+			</nav>
+		</div>
+		<nav class="main-navigation">
+			<a class="logo">
+				<span class="logo__name">Logo</span>
+				<span class="logo__signature">Logo-slogan</span>
+			</a>
+			<ul class="main-navigation__category-list">
+				<li class="main-navigation__category-item">
+					<a href="#" class="main-navigation__category-link">Овощи</a>
+					<span class="main-navigation__open-icon"></span>
+					<ul class="main-navigation__subcategory-list">
+						<li class="main-navigation__subcategory-item">
+							<a href="#" class="main-navigation__subcategory-link">Помидоры</a>
+						</li><li class="main-navigation__subcategory-item">
+							<a href="#" class="main-navigation__subcategory-link">Кукумбер</a>
+						</li><li class="main-navigation__subcategory-item">
+							<a href="#" class="main-navigation__subcategory-link">Кабачки</a>
+						</li><li class="main-navigation__subcategory-item">
+							<a href="#" class="main-navigation__subcategory-link">Картошка</a>
+						</li><li class="main-navigation__subcategory-item">
+							<a href="#" class="main-navigation__subcategory-link">Антошка</a>
+						</li><li class="main-navigation__subcategory-item">
+							<a href="#" class="main-navigation__subcategory-link">Лопата</a>
+						</li>
+					</ul>
+					<div class="main-navigation__category-accent">
+						<img src="#" alt="" class="main-navigation__accent-image" height="16" width="16">
+						<span class="main-navigation__accent-signature"></span>
+					</div>
+				</li>
+				<li class="main-navigation__category">
+					<a href="#" class="main-navigation__category-link">Овощи</a>
+					<span class="main-navigation__open-icon"></span>
+					<ul class="main-navigation__subcategory-list">
+						<li class="main-navigation__subcategory-item">
+							<a href="#" class="main-navigation__subcategory-link">Помидоры</a>
+						</li><li class="main-navigation__subcategory-item">
+							<a href="#" class="main-navigation__subcategory-link">Кукумбер</a>
+						</li><li class="main-navigation__subcategory-item">
+							<a href="#" class="main-navigation__subcategory-link">Кабачки</a>
+						</li><li class="main-navigation__subcategory-item">
+							<a href="#" class="main-navigation__subcategory-link">Картошка</a>
+						</li><li class="main-navigation__subcategory-item">
+							<a href="#" class="main-navigation__subcategory-link">Антошка</a>
+						</li><li class="main-navigation__subcategory-item">
+							<a href="#" class="main-navigation__subcategory-link">Лопата</a>
+						</li>
+					</ul>
+					<div class="main-navigation__category-accent">
+						<img src="#" alt="" class="main-navigation__accent-image">
+						<span class="main-navigation__accent-signature"></span>
+					</div>
+				</li>
+				<li class="main-navigation__category">
+					<a href="#" class="main-navigation__category-link">Овощи</a>
+					<span class="main-navigation__open-icon"></span>
+					<ul class="main-navigation__subcategory-list">
+						<li class="main-navigation__subcategory-item">
+							<a href="#" class="main-navigation__subcategory-link">Помидоры</a>
+						</li><li class="main-navigation__subcategory-item">
+							<a href="#" class="main-navigation__subcategory-link">Кукумбер</a>
+						</li><li class="main-navigation__subcategory-item">
+							<a href="#" class="main-navigation__subcategory-link">Кабачки</a>
+						</li><li class="main-navigation__subcategory-item">
+							<a href="#" class="main-navigation__subcategory-link">Картошка</a>
+						</li><li class="main-navigation__subcategory-item">
+							<a href="#" class="main-navigation__subcategory-link">Антошка</a>
+						</li><li class="main-navigation__subcategory-item">
+							<a href="#" class="main-navigation__subcategory-link">Лопата</a>
+						</li>
+					</ul>
+					<div class="main-navigation__category-accent">
+						<img src="#" alt="" class="main-navigation__accent-image">
+						<span class="main-navigation__accent-signature"></span>
+					</div>
+				</li>
+				<li class="main-navigation__category">
+					<a href="#" class="main-navigation__category-link">Овощи</a>
+					<span class="main-navigation__open-icon"></span>
+					<ul class="main-navigation__subcategory-list">
+						<li class="main-navigation__subcategory-item">
+							<a href="#" class="main-navigation__subcategory-link">Помидоры</a>
+						</li><li class="main-navigation__subcategory-item">
+							<a href="#" class="main-navigation__subcategory-link">Кукумбер</a>
+						</li><li class="main-navigation__subcategory-item">
+							<a href="#" class="main-navigation__subcategory-link">Кабачки</a>
+						</li><li class="main-navigation__subcategory-item">
+							<a href="#" class="main-navigation__subcategory-link">Картошка</a>
+						</li><li class="main-navigation__subcategory-item">
+							<a href="#" class="main-navigation__subcategory-link">Антошка</a>
+						</li><li class="main-navigation__subcategory-item">
+							<a href="#" class="main-navigation__subcategory-link">Лопата</a>
+						</li>
+					</ul>
+					<div class="main-navigation__category-accent">
+						<img src="#" alt="" class="main-navigation__accent-image">
+						<span class="main-navigation__accent-signature"></span>
+					</div>
+				</li>
+				<li class="main-navigation__category">
+					<a href="#" class="main-navigation__category-link">Овощи</a>
+					<span class="main-navigation__open-icon"></span>
+					<ul class="main-navigation__subcategory-list">
+						<li class="main-navigation__subcategory-item">
+							<a href="#" class="main-navigation__subcategory-link">Помидоры</a>
+						</li><li class="main-navigation__subcategory-item">
+							<a href="#" class="main-navigation__subcategory-link">Кукумбер</a>
+						</li><li class="main-navigation__subcategory-item">
+							<a href="#" class="main-navigation__subcategory-link">Кабачки</a>
+						</li><li class="main-navigation__subcategory-item">
+							<a href="#" class="main-navigation__subcategory-link">Картошка</a>
+						</li><li class="main-navigation__subcategory-item">
+							<a href="#" class="main-navigation__subcategory-link">Антошка</a>
+						</li><li class="main-navigation__subcategory-item">
+							<a href="#" class="main-navigation__subcategory-link">Лопата</a>
+						</li>
+					</ul>
+					<div class="main-navigation__category-accent">
+						<img src="#" alt="" class="main-navigation__accent-image">
+						<span class="main-navigation__accent-signature"></span>
+					</div>
+				</li>
+				<li class="main-navigation__category">
+					<a href="#" class="main-navigation__category-link">Овощи</a>
+					<span class="main-navigation__open-icon"></span>
+					<ul class="main-navigation__subcategory-list">
+						<li class="main-navigation__subcategory-item">
+							<a href="#" class="main-navigation__subcategory-link">Помидоры</a>
+						</li><li class="main-navigation__subcategory-item">
+							<a href="#" class="main-navigation__subcategory-link">Кукумбер</a>
+						</li><li class="main-navigation__subcategory-item">
+							<a href="#" class="main-navigation__subcategory-link">Кабачки</a>
+						</li><li class="main-navigation__subcategory-item">
+							<a href="#" class="main-navigation__subcategory-link">Картошка</a>
+						</li><li class="main-navigation__subcategory-item">
+							<a href="#" class="main-navigation__subcategory-link">Антошка</a>
+						</li><li class="main-navigation__subcategory-item">
+							<a href="#" class="main-navigation__subcategory-link">Лопата</a>
+						</li>
+					</ul>
+					<div class="main-navigation__category-accent">
+						<img src="#" alt="" class="main-navigation__accent-image">
+						<span class="main-navigation__accent-signature"></span>
+					</div>
+				</li>
+			</ul>
+		</nav>
+	</header>
 </body>
 </html>
