Шапка почти готова

--- a/Baby-shop/index.html
+++ b/Baby-shop/index.html
@@ -3,6 +3,7 @@
 <head>
 	<meta charset="UTF-8">
 	<title>Document</title>
+	<link href="https://fonts.googleapis.com/css?family=Montserrat:300,400,500,700&amp;subset=cyrillic" rel="stylesheet">
 	<link rel="stylesheet" href="css/Nolmalize.css">
 	<link rel="stylesheet" href="css/style.css">
 </head>
@@ -18,14 +19,15 @@
 			<nav class="user-navigation">
 				<button class="user-navigation__login user-navigation__item"></button>
 				<a href="#" class="user-navigation__likes user-navigation__item"></a>
-				<a href="#" class="user-navigation__basket user-navigation__item"></a>
-				<a href="#" class="user-navigation__value user-navigation__item">12</a>
+				<a href="#" class="user-navigation__basket user-navigation__item">
+					<span class="user-navigation__value user-navigation__item">12</span>
+				</a>
 			</nav>
 		</div>
 		<nav class="main-navigation">
 			<a class="logo">
 				<span class="logo__name">Logo</span>
-				<span class="logo__signature">Logo-slogan</span>
+				<span class="logo__signature">Logo-sloganLogo-sloganLogo-slogan</span>
 			</a>
 			<ul class="main-navigation__category-list">
 				<li class="main-navigation__category-item">
@@ -34,140 +36,199 @@
 					<ul class="main-navigation__subcategory-list">
 						<li class="main-navigation__subcategory-item">
 							<a href="#" class="main-navigation__subcategory-link">Помидоры</a>
-						</li><li class="main-navigation__subcategory-item">
+						</li>
+						<li class="main-navigation__subcategory-item">
 							<a href="#" class="main-navigation__subcategory-link">Кукумбер</a>
-						</li><li class="main-navigation__subcategory-item">
+						</li>
+						<li class="main-navigation__subcategory-item">
 							<a href="#" class="main-navigation__subcategory-link">Кабачки</a>
-						</li><li class="main-navigation__subcategory-item">
+						</li>
+						<li class="main-navigation__subcategory-item">
 							<a href="#" class="main-navigation__subcategory-link">Картошка</a>
-						</li><li class="main-navigation__subcategory-item">
+						</li>
+						<li class="main-navigation__subcategory-item">
 							<a href="#" class="main-navigation__subcategory-link">Антошка</a>
-						</li><li class="main-navigation__subcategory-item">
+						</li>
+						<li class="main-navigation__subcategory-item">
 							<a href="#" class="main-navigation__subcategory-link">Лопата</a>
 						</li>
+						<li class="main-navigation__category-accent">
+							<img src="#" alt="" class="main-navigation__accent-image" height="16" width="16">
+							<span class="main-navigation__accent-signature"></span>
+						</li>
 					</ul>
-					<div class="main-navigation__category-accent">
-						<img src="#" alt="" class="main-navigation__accent-image" height="16" width="16">
-						<span class="main-navigation__accent-signature"></span>
-					</div>
 				</li>
-				<li class="main-navigation__category">
+				<li class="main-navigation__category-item">
 					<a href="#" class="main-navigation__category-link">Овощи</a>
 					<span class="main-navigation__open-icon"></span>
 					<ul class="main-navigation__subcategory-list">
 						<li class="main-navigation__subcategory-item">
 							<a href="#" class="main-navigation__subcategory-link">Помидоры</a>
-						</li><li class="main-navigation__subcategory-item">
+						</li>
+						<li class="main-navigation__subcategory-item">
 							<a href="#" class="main-navigation__subcategory-link">Кукумбер</a>
-						</li><li class="main-navigation__subcategory-item">
+						</li>
+						<li class="main-navigation__subcategory-item">
 							<a href="#" class="main-navigation__subcategory-link">Кабачки</a>
-						</li><li class="main-navigation__subcategory-item">
+						</li>
+						<li class="main-navigation__subcategory-item">
 							<a href="#" class="main-navigation__subcategory-link">Картошка</a>
-						</li><li class="main-navigation__subcategory-item">
+						</li>
+						<li class="main-navigation__subcategory-item">
 							<a href="#" class="main-navigation__subcategory-link">Антошка</a>
-						</li><li class="main-navigation__subcategory-item">
+						</li>
+						<li class="main-navigation__subcategory-item">
 							<a href="#" class="main-navigation__subcategory-link">Лопата</a>
 						</li>
+						<li class="main-navigation__category-accent">
+							<img src="#" alt="" class="main-navigation__accent-image" height="16" width="16">
+							<span class="main-navigation__accent-signature"></span>
+						</li>
 					</ul>
-					<div class="main-navigation__category-accent">
-						<img src="#" alt="" class="main-navigation__accent-image">
-						<span class="main-navigation__accent-signature"></span>
-					</div>
 				</li>
-				<li class="main-navigation__category">
+				<li class="main-navigation__category-item">
 					<a href="#" class="main-navigation__category-link">Овощи</a>
 					<span class="main-navigation__open-icon"></span>
 					<ul class="main-navigation__subcategory-list">
 						<li class="main-navigation__subcategory-item">
 							<a href="#" class="main-navigation__subcategory-link">Помидоры</a>
-						</li><li class="main-navigation__subcategory-item">
+						</li>
+						<li class="main-navigation__subcategory-item">
 							<a href="#" class="main-navigation__subcategory-link">Кукумбер</a>
-						</li><li class="main-navigation__subcategory-item">
+						</li>
+						<li class="main-navigation__subcategory-item">
 							<a href="#" class="main-navigation__subcategory-link">Кабачки</a>
-						</li><li class="main-navigation__subcategory-item">
+						</li>
+						<li class="main-navigation__subcategory-item">
 							<a href="#" class="main-navigation__subcategory-link">Картошка</a>
-						</li><li class="main-navigation__subcategory-item">
+						</li>
+						<li class="main-navigation__subcategory-item">
 							<a href="#" class="main-navigation__subcategory-link">Антошка</a>
-						</li><li class="main-navigation__subcategory-item">
+						</li>
+						<li class="main-navigation__subcategory-item">
 							<a href="#" class="main-navigation__subcategory-link">Лопата</a>
 						</li>
+						<li class="main-navigation__category-accent">
+							<img src="#" alt="" class="main-navigation__accent-image" height="16" width="16">
+							<span class="main-navigation__accent-signature"></span>
+						</li>
 					</ul>
-					<div class="main-navigation__category-accent">
-						<img src="#" alt="" class="main-navigation__accent-image">
-						<span class="main-navigation__accent-signature"></span>
-					</div>
 				</li>
-				<li class="main-navigation__category">
+				<li class="main-navigation__category-item">
 					<a href="#" class="main-navigation__category-link">Овощи</a>
 					<span class="main-navigation__open-icon"></span>
 					<ul class="main-navigation__subcategory-list">
 						<li class="main-navigation__subcategory-item">
 							<a href="#" class="main-navigation__subcategory-link">Помидоры</a>
-						</li><li class="main-navigation__subcategory-item">
+						</li>
+						<li class="main-navigation__subcategory-item">
 							<a href="#" class="main-navigation__subcategory-link">Кукумбер</a>
-						</li><li class="main-navigation__subcategory-item">
+						</li>
+						<li class="main-navigation__subcategory-item">
 							<a href="#" class="main-navigation__subcategory-link">Кабачки</a>
-						</li><li class="main-navigation__subcategory-item">
+						</li>
+						<li class="main-navigation__subcategory-item">
 							<a href="#" class="main-navigation__subcategory-link">Картошка</a>
-						</li><li class="main-navigation__subcategory-item">
+						</li>
+						<li class="main-navigation__subcategory-item">
 							<a href="#" class="main-navigation__subcategory-link">Антошка</a>
-						</li><li class="main-navigation__subcategory-item">
+						</li>
+						<li class="main-navigation__subcategory-item">
 							<a href="#" class="main-navigation__subcategory-link">Лопата</a>
 						</li>
+						<li class="main-navigation__category-accent">
+							<img src="#" alt="" class="main-navigation__accent-image" height="16" width="16">
+							<span class="main-navigation__accent-signature"></span>
+						</li>
 					</ul>
-					<div class="main-navigation__category-accent">
-						<img src="#" alt="" class="main-navigation__accent-image">
-						<span class="main-navigation__accent-signature"></span>
-					</div>
 				</li>
-				<li class="main-navigation__category">
+				<li class="main-navigation__category-item">
 					<a href="#" class="main-navigation__category-link">Овощи</a>
 					<span class="main-navigation__open-icon"></span>
 					<ul class="main-navigation__subcategory-list">
 						<li class="main-navigation__subcategory-item">
 							<a href="#" class="main-navigation__subcategory-link">Помидоры</a>
-						</li><li class="main-navigation__subcategory-item">
+						</li>
+						<li class="main-navigation__subcategory-item">
 							<a href="#" class="main-navigation__subcategory-link">Кукумбер</a>
-						</li><li class="main-navigation__subcategory-item">
+						</li>
+						<li class="main-navigation__subcategory-item">
 							<a href="#" class="main-navigation__subcategory-link">Кабачки</a>
-						</li><li class="main-navigation__subcategory-item">
+						</li>
+						<li class="main-navigation__subcategory-item">
 							<a href="#" class="main-navigation__subcategory-link">Картошка</a>
-						</li><li class="main-navigation__subcategory-item">
+						</li>
+						<li class="main-navigation__subcategory-item">
 							<a href="#" class="main-navigation__subcategory-link">Антошка</a>
-						</li><li class="main-navigation__subcategory-item">
+						</li>
+						<li class="main-navigation__subcategory-item">
 							<a href="#" class="main-navigation__subcategory-link">Лопата</a>
 						</li>
+						<li class="main-navigation__category-accent">
+							<img src="#" alt="" class="main-navigation__accent-image" height="16" width="16">
+							<span class="main-navigation__accent-signature"></span>
+						</li>
 					</ul>
-					<div class="main-navigation__category-accent">
-						<img src="#" alt="" class="main-navigation__accent-image">
-						<span class="main-navigation__accent-signature"></span>
-					</div>
 				</li>
-				<li class="main-navigation__category">
+				<li class="main-navigation__category-item">
 					<a href="#" class="main-navigation__category-link">Овощи</a>
 					<span class="main-navigation__open-icon"></span>
 					<ul class="main-navigation__subcategory-list">
 						<li class="main-navigation__subcategory-item">
 							<a href="#" class="main-navigation__subcategory-link">Помидоры</a>
-						</li><li class="main-navigation__subcategory-item">
+						</li>
+						<li class="main-navigation__subcategory-item">
 							<a href="#" class="main-navigation__subcategory-link">Кукумбер</a>
-						</li><li class="main-navigation__subcategory-item">
+						</li>
+						<li class="main-navigation__subcategory-item">
 							<a href="#" class="main-navigation__subcategory-link">Кабачки</a>
-						</li><li class="main-navigation__subcategory-item">
+						</li>
+						<li class="main-navigation__subcategory-item">
 							<a href="#" class="main-navigation__subcategory-link">Картошка</a>
-						</li><li class="main-navigation__subcategory-item">
+						</li>
+						<li class="main-navigation__subcategory-item">
 							<a href="#" class="main-navigation__subcategory-link">Антошка</a>
-						</li><li class="main-navigation__subcategory-item">
+						</li>
+						<li class="main-navigation__subcategory-item">
 							<a href="#" class="main-navigation__subcategory-link">Лопата</a>
 						</li>
+						<li class="main-navigation__category-accent">
+							<img src="#" alt="" class="main-navigation__accent-image" height="16" width="16">
+							<span class="main-navigation__accent-signature"></span>
+						</li>
 					</ul>
-					<div class="main-navigation__category-accent">
-						<img src="#" alt="" class="main-navigation__accent-image">
-						<span class="main-navigation__accent-signature"></span>
-					</div>
+				</li>
+				<li class="main-navigation__category-item">
+					<a href="#" class="main-navigation__category-link">Овощи</a>
+					<span class="main-navigation__open-icon"></span>
+					<ul class="main-navigation__subcategory-list">
+						<li class="main-navigation__subcategory-item">
+							<a href="#" class="main-navigation__subcategory-link">Помидоры</a>
+						</li>
+						<li class="main-navigation__subcategory-item">
+							<a href="#" class="main-navigation__subcategory-link">Кукумбер</a>
+						</li>
+						<li class="main-navigation__subcategory-item">
+							<a href="#" class="main-navigation__subcategory-link">Кабачки</a>
+						</li>
+						<li class="main-navigation__subcategory-item">
+							<a href="#" class="main-navigation__subcategory-link">Картошка</a>
+						</li>
+						<li class="main-navigation__subcategory-item">
+							<a href="#" class="main-navigation__subcategory-link">Антошка</a>
+						</li>
+						<li class="main-navigation__subcategory-item">
+							<a href="#" class="main-navigation__subcategory-link">Лопата</a>
+						</li>
+						<li class="main-navigation__category-accent">
+							<img src="#" alt="" class="main-navigation__accent-image" height="16" width="16">
+							<span class="main-navigation__accent-signature"></span>
+						</li>
+					</ul>
 				</li>
 			</ul>
 		</nav>
 	</header>
+	<script src="js/sistem.js"></script>
 </body>
 </html>
