шапка. добавил кнопку открытия меню

--- a/Baby-shop/index.html
+++ b/Baby-shop/index.html
@@ -26,10 +26,9 @@
 		</div>
 		<nav class="main-navigation">
 			<a class="logo">
-				<span class="logo__name">Logo</span>
+				<span class="logo__name">Baby</span>
 				<span class="logo__signature">Logo-sloganLogo-sloganLogo-slogan</span>
-			</a>
-			<ul class="main-navigation__category-list">
+			</a>			<ul class="main-navigation__category-list visually-hidden">
 				<li class="main-navigation__category-item">
 					<a href="#" class="main-navigation__category-link">Овощи</a>
 					<span class="main-navigation__open-icon"></span>
@@ -227,8 +226,21 @@
 					</ul>
 				</li>
 			</ul>
+			<form action="" class="search-form" >
+				<input type="text" class="search-form__input">
+				<button class="search-form__button"></button>
+			</form>
+			<div class="main-navigation__button-wrapper">
+				<button class="main-navigation__open-button"></button>	
+			</div>
 		</nav>
 	</header>
+	<main class="main-content">
+		<h1 class="site-name visually-hidden">Магазин детских вещей Baby-shop</h1>
+		<section class="main-slider">
+			<img class="main0slider__image" src="images/main-slider-1.jpg" width="100%" alt="">
+		</section>
+	</main>
 	<script src="js/sistem.js"></script>
 </body>
 </html>
