--- a/Baby-shop/index.html
+++ b/Baby-shop/index.html
@@ -242,7 +242,59 @@
 	<main class="main-content">
 		<h1 class="site-name visually-hidden">Магазин детских вещей Baby-shop</h1>
 		<section class="main-slider">
-			<img class="main0slider__image" src="images/main-slider-1.jpg" width="100%" alt="">
+			<h2 class="main-slider-tittle visually-hidden">Главный слайдер</h2>
+			<img class="main-slider__image" src="images/main-slider-1.jpg" width="100%" max-height="846" alt="">
+		</section>
+		<section class="category-first">
+			<h2 class="category-title">Категория товара</h1>
+			<p class="category-signature">Описание категории</p>
+			<div class="category-wrapper">
+				<div class="category-item">
+					<img src="images/photo-square.png" alt="" class="category-item__image" width="100%" height="">
+					<h3 class="category-item__title">Пеппер</h3>
+					<p class="category-item__price">
+						<b class="category-item__new-price">245</b>
+						<b class="category-item__old-price">364</b>Руб
+					</p>
+				</div>
+				<div class="category-item">
+					<img src="images/photo-square.png" alt="" class="category-item__image" width="100%" height="">
+					<h3 class="category-item__title">Пеппер</h3>
+					<p class="category-item__price">
+						<b class="category-item__new-price">245</b>
+						<b class="category-item__old-price">364</b>Руб
+					</p>
+				</div>
+			</div>
+		</section>
+		<section class="discount">
+			<h2 class="discount-title visually-hidden">Наши скидки</h2>
+			<button class="discount-button--left slider-button--left">
+				<span class="slider-button__paint--left"></span>
+			</button>
+			<button class="discount-button--right slider-button--right">
+				<span class="slider-button__paint--right"></span>
+			</button>
+			<div class="discount-slide-wrapper-one">
+				<div class="discount-card">
+					<span class="discount-card__tittle">Я ананас!</span>
+					<img src="images/photo-square.png" alt="" class="discount-card__image" width="100%">
+				</div>
+				<div class="discount-info">
+					<div class="discount-data">
+						<span class="discount-data__day discount-data__item">2<br>дней</span>
+						<span class="discount-data__hour discount-data__item">1<br>час.</span>
+						<span class="discount-data__min discount-data__item">31<br>мин.</span>
+						<span class="discount-data__sec discount-data__item">16<br>сек.</span>
+					</div>
+					<h3 class="discount-product-name">А я томат!</h3>
+					<p class="discount-price">
+						<b class="discount-new-price">245</b>
+						<b class="discount-old-price">364</b>Руб
+					</p>
+					<button class="discount-button button">В корзину</button>
+				</div>
+			</div>
 		</section>
 	</main>
 	<script src="js/sistem.js"></script>
